chore(ci): Improve sonar analisys